# GeoMatchAI

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  example_usage.py  goal.md  model.py  pyproject.toml
examples/: model_analysis.ipynb  model_summaries.py  test_model_loading.py  usertest_comprehensive.py
examples/input/domkirche_st_stephan/: cord.txt
examples/input/mariacki/: cord.txt
examples/input/palace_museum_warsaw/: cord.txt
examples/input/palace_of_culture/: cord.txt
examples/input/wawel/: cord.txt
fetchers/: base_fetcher.py  mapillary_fetcher.py
img/: analysis_report.txt
src/geomatchai/: __init__.py  config.py  exceptions.py  verifier.py
src/geomatchai/fetchers/: __init__.py  base_fetcher.py  mapillary_fetcher.py  temp.json
src/geomatchai/gallery/: __init__.py  gallery_builder.py
src/geomatchai/models/: __init__.py  efficientnet.py  efficientnet_timm.py
src/geomatchai/preprocessing/: __init__.py  preprocessor.py  segmentation.py
src/geomatchai/verification/: __init__.py  verifier.py
tests/: plot_results.py  test_comprehensive.py  test_gallery.py  test_preprocessing.py  test_verifier.py  usertest_gallery.py  usertest_preprocessing.py  usertest_verifier.py
