[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GeoMatchAI"
version = "0.1.0"
description = "High-Performance Visual Place Verification System"
requires-python = "==3.13.*"
dependencies = [
    "pillow>=11.3.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "timm>=1.0.22",
    "requests>=2.32.5",
    "mapillary>=1.0.15",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["geomatchai*"]

[tool.uv.sources] # TODO: make automatic selection based on available hardware
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]
timm = [
    { index = "pypi" },
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
default = true


[tool.isort]
profile = "black"
skip_gitignore = true
known_first_party = ["geomatchai", "tests"]

[tool.ruff]
target-version = "py314"
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # complexity
]
